# Minecraft-Metal-MacOS

./: .gitignore  CMakeLists.txt  README.md
docs/: ArchitectureMap.md
src/Client/App/: AppDelegate.h  AppDelegate.mm  AppInputState.h  AppInputState.mm  AppWorldRenderer.h  AppWorldRenderer.mm  CrosshairView.h  CrosshairView.mm  DebugHudController.h  DebugHudController.mm  DebugHudFormatter.cpp  DebugHudFormatter.h  InventoryView.h  InventoryView.mm  MetalRendererBridge.h  MetalRendererBridge.mm  TerrainRenderResources.h  TerrainRenderResources.mm  UiImageHelpers.h  main.mm
src/Client/Core/: BlockInteractionController.cpp  BlockInteractionController.h  Camera.cpp  Camera.h  InputState.h  Minecraft.cpp  Minecraft.h  PlayerController.cpp  PlayerController.h
src/Client/Debug/: ChunkBorderOverlay.cpp  ChunkBorderOverlay.h  RenderDebugController.cpp  RenderDebugController.h
src/Client/GameMode/: CreativeGameMode.cpp  CreativeGameMode.h  GameMode.cpp  GameMode.h  SpectatorGameMode.cpp  SpectatorGameMode.h  SurvivalGameMode.cpp  SurvivalGameMode.h
src/Client/Inventory/: Inventory.cpp  Inventory.h
src/Client/Render/: BlockRender.h
src/Client/Render/Metal/: ChunkMeshers.h  LevelRenderer.cpp  LevelRenderer.h  MetalRenderer.h  MetalRenderer.mm
src/Client/Render/Particles/: BreakingParticles.cpp  BreakingParticles.h
src/Common/Math/: Vec3.h
src/World/Chunk/: LevelChunk.cpp  LevelChunk.h
src/World/Entity/: Entity.cpp  Entity.h  ItemEntity.cpp  ItemEntity.h  ItemEntitySystem.cpp  ItemEntitySystem.h  Mob.cpp  Mob.h  Player.cpp  Player.h
src/World/Level/: ChunkSource.cpp  ChunkSource.h  Level.cpp  Level.h  LevelListener.h  LevelSource.h  ThreadPool.cpp  ThreadPool.h
src/World/Phys/: AABB.h
src/World/Tile/: Tile.h
